--- a/.github/workflows/deploytoContainerWebApp-1.yml
+++ b/.github/workflows/deploytoContainerWebApp-1.yml
@@ -7,6 +7,13 @@ jobs:
     - name: 'Checkout Github Action' 
       uses: actions/checkout@master
     
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots verify
+    
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
